--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,14 @@
 </head>
 <body>
     <header>
+        <h1>Le Petit Dinner 🍽️</h1>
         <nav>
             <ul>
-                <button class="tabs">Home</button>
-                <button class="tabs">Menu</button>
-                <button class="tabs">About</button>
+                <li class=" Home tabs"><button>Home</button></li>
+                <li class=" Menu tabs"><button>Menu</button></li>
+                <li class=" Contact tabs"><button>Contact</button></li>
             </ul>
         </nav>
     </header>
-    <div id="container">
-    </div>
 </body>
 </html>
